skeleton added including image n icon

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./asset/favicon.ico"/>
-    <title>My Age Calculator</title>
+    <title>Age Calculator</title>
 </head>
 <body>
-    <div class="">Calculator Page</div>
+    <div class="container">
+        <h1>Age Calculator</h1>
+        <div class="items">
+            <div class="icon">
+                <img src="./asset/contact.svg" alt="">
+            </div>
+            <div class="form">
+                <label for="birthday">Enter your date of birth</label>
+                <input type="date" id="birthday" name="birthday">
+            </div>
+            <div class="banner">
+                <p id="result"> You are 21 years old</p>
+                <img src="./asset/images/weirdo.jpg" alt="">
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
