desktop view styled and svg added to asset folder

--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="./asset/favicon.ico"/>
     <title>Age Calculator</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Age Calculator</h1>
-        <div class="items">
+        <div class="area">
+            <h1>Age Calculator</h1>
             <div class="icon">
-                <img src="./asset/contact.svg" alt="">
+                <img src="./asset/contactd.svg" alt="">
             </div>
             <div class="form">
                 <label for="birthday">Enter your date of birth</label>
                 <input type="date" id="birthday" name="birthday">
             </div>
-            <div class="banner">
-                <p id="result"> You are 21 years old</p>
-                <img src="./asset/images/weirdo.jpg" alt="">
-            </div>
+            <button>Calculate Age</button>
+        </div>
+        <div class="banner">
+            <p id="result"> You are 21 years old</p>
+            <!-- <img src="./asset/images/weirdo.jpg" alt=""> -->
         </div>
         
     </div>
