adjusted desktop view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <button>Calculate Age</button>
         </div>
         <div class="banner">
-            <p id="result"> You are 21 years old</p>
+            <div>
+                <p id="result"> You are 21 years old</p>
+            </div>
             <!-- <img src="./asset/images/weirdo.jpg" alt=""> -->
         </div>
         
