--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
             </div>
             <div class="form">
                 <label for="birthday">Enter your date of birth</label>
-                <input type="date" id="birthday" name="birthday">
+                <input type="date" id="input" name="birthday">
             </div>
-            <button>Calculate Age</button>
+            <button id="btn">Calculate Age</button>
         </div>
         <div class="banner">
             <div>
-                <p id="result"> You are 21 years old</p>
+                <p id="result"> Like to know your age? </p>
             </div>
             <!-- <img src="./asset/images/weirdo.jpg" alt=""> -->
         </div>
         
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
